[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Character/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/GFX/PNG/Hitman 1/hitman1_stand.png" type="Texture" id=3]
[ext_resource path="res://Resources/Character/Player_Collision_Shape.tres" type="Shape2D" id=4]
[ext_resource path="res://Resources/Character/Player_Occluder.tres" type="OccluderPolygon2D" id=5]
[ext_resource path="res://Scenes/Tools/Flashlight.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/GFX/ProgressBar/gray_horizontal_progress.png" type="Texture" id=7]
[ext_resource path="res://Assets/GFX/ProgressBar/red_horizontal_progress.png" type="Texture" id=8]
[ext_resource path="res://Scenes/HUD/Suspicion.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/HUD/ItemList.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/HUD/LootDisplay.tscn" type="PackedScene" id=11]

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )
SPEED = 350

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 0 )
shape = ExtResource( 4 )

[node name="LightOccluder2D" parent="." index="2"]
occluder = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="." index="3"]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Light2D" type="Light2D" parent="." index="4"]
texture = ExtResource( 3 )
mode = 2

[node name="Flashlight" parent="." index="5" instance=ExtResource( 6 )]
visible = false
color = Color( 0, 1, 0.858824, 1 )

[node name="VisionModeTimer" type="Timer" parent="." index="6"]
wait_time = 0.5
one_shot = true

[node name="DisguiseTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="GUI" type="Node2D" parent="." index="8"]
editor/display_folded = true

[node name="DisguiseProgressBar" type="TextureProgress" parent="GUI" index="0"]
light_mask = 0
margin_left = -25.66
margin_top = -54.0838
margin_right = 54.34
margin_bottom = -34.0838
rect_scale = Vector2( 0.7, 0.5 )
step = 0.0
value = 70.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )

[node name="HUD" type="CanvasLayer" parent="." index="9"]

[node name="Suspicion" parent="HUD" index="0" instance=ExtResource( 9 )]

[node name="ItemList" parent="HUD" index="1" instance=ExtResource( 10 )]

[node name="LootDisplay" parent="HUD" index="2" instance=ExtResource( 11 )]
[connection signal="timeout" from="VisionModeTimer" to="." method="_on_VisionModeTimer_timeout"]
[connection signal="timeout" from="DisguiseTimer" to="." method="reveal"]
